added arduino project, think we're lacking the memory though.

--- a/Chip8Emu/Chip8Emu.vcxproj
+++ b/Chip8Emu/Chip8Emu.vcxproj
@@ -75,10 +75,12 @@
   <ItemGroup>
     <ClInclude Include="Emu.h" />
     <ClInclude Include="EmuTypes.h" />
+    <ClInclude Include="PlatformArduino.h" />
     <ClInclude Include="PlatformWin.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Emu.cpp" />
+    <ClCompile Include="PlatformArduino.cpp" />
     <ClCompile Include="PlatformWin.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
